# UniverGroupsLAB

./: .gitignore  CMakeLists.txt  classes.cpp  classes.h  funcs.h  main.cpp  tests.cpp  vector.h
classes/: DayShift.cpp  DayShift.h  Group.cpp  Group.h  NightShift.cpp  NightShift.h  PaidGroup.cpp  PaidGroup.h  Table.cpp  Table.h  structs.h  vector.h
latex/: annotated.tex  classVector_1_1MyVec.tex  classVector_1_1MyVecIt.tex  classtpk4_1_1DayShift.tex  classtpk4_1_1DayShift__inherit__graph.md5  classtpk4_1_1Group.tex  classtpk4_1_1Group__inherit__graph.md5  classtpk4_1_1NightShift.tex  classtpk4_1_1NightShift__inherit__graph.md5  classtpk4_1_1PaidGroup.tex  classtpk4_1_1PaidGroup__inherit__graph.md5  classtpk4_1_1Table.tex  hierarchy.tex  refman.tex
tests/: basic_tests.cpp  table_tests.cpp
